# mcp_client

./: .gitignore  README.md  config.json.template  config.py.template  install.py  mcp_terminal.py  mcpclient.py  pyproject.toml  requirements.txt
