[project]
name = "mcp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "customtkinter>=5.2.2",
    "httpx>=0.28.1",
    "mcp>=1.6.0",
    "openai>=1.70.0",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "typer>=0.15.2",
]
